log
Fri 26 Apr 2024 07:02:48 PM UTC: 
 hashmap.c | 53 ++++++++++++++++++++++++++++++++---------------------
 1 file changed, 32 insertions(+), 21 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:1: error: expected ‘)’ before ‘}’ token
   54 | }
      | ^
hashmap.c:51:6: note: to match this ‘(’
   51 |   if (map->buckets[posicion] == NULL || map->buckets[posicion]->key == NULL
      |      ^
hashmap.c:54:1: error: expected expression before ‘}’ token
   54 | }
      | ^
hashmap.c: In function ‘eraseMap’:
hashmap.c:77:1: error: expected expression before ‘}’ token
   77 | }
      | ^
hashmap.c: In function ‘searchMap’:
hashmap.c:85:16: error: control reaches end of non-void function [-Werror=return-type]
   85 |   return NULL; }
      |                ^
cc1: all warnings being treated as errors
Compilation failed
7f889db
Fri 26 Apr 2024 07:46:30 PM UTC: 
 hashmap.c | 35 +++++++++++++++++++++++++++++------
 1 file changed, 29 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:100:1: error: expected expression before ‘}’ token
  100 | }
      | ^
hashmap.c: In function ‘searchMap’:
hashmap.c:108:16: error: control reaches end of non-void function [-Werror=return-type]
  108 |   return NULL; }
      |                ^
cc1: all warnings being treated as errors
Compilation failed
c45d94c
